# daneel

./: LICENSE  README.md  __init__.py  daneel.py  flake.nix  pyproject.toml  result  test.sh
actions/: example_action.py  fix_review.py  implement.py
llm/0001_initial/: implementation.md  requirements.md  todo.md
llm/0002_pexpect/: requirements.md
tests/: test_build_integration.py  test_daneel.py  test_environment.py  test_integration.py
